--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <img id="lucky" src="assets/lucky.png">
 
     <!-- props -->
-
+    <img id="proyectile" src="assets/projectile.png">
     <!-- environment -->
 
     <img id="layer1" src="assets/layer1.png">
