--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 
     <!-- props -->
     <img id="proyectile" src="assets/projectile.png">
+    <img id="gears" src="assets/gears.png">
     <!-- environment -->
 
     <img id="layer1" src="assets/layer1.png">
