--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
     <!-- props -->
     <img id="proyectile" src="assets/projectile.png">
     <img id="gears" src="assets/gears.png">
+    <img id="fireExplosion" src="assets/fireExplosion.png">
+    <img id="smokeExplosion" src="assets/smokeExplosion.png">
     <!-- environment -->
 
     <img id="layer1" src="assets/layer1.png">
